[ML] Fixes chart header flex layout overflows.

--- a/x-pack/plugins/ml/public/explorer/explorer_charts/styles/explorer_chart.less
+++ b/x-pack/plugins/ml/public/explorer/explorer_charts/styles/explorer_chart.less
@@ -1,4 +1,5 @@
 .ml-explorer-chart-container {
+  overflow: hidden;
 
   .ml-explorer-chart-svg {
     font-size: 12px;
@@ -107,6 +108,10 @@
     stroke-width: 6px;
     stroke-opacity: 0.65;
   }
+}
+
+.ml-explorer-chart {
+  overflow: hidden;
 }
 
 .ml-explorer-chart-content-wrapper {
